--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
     useLibrary  'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.michael.moviecake"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -30,9 +30,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "com.andkulikov:transitionseverywhere:1.7.0"
     //compile group: 'info.movito', name: 'themoviedbapi', version:'1.3'
     compile 'com.fasterxml.jackson.core:jackson-core:2.4.4'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.4'
@@ -45,6 +46,8 @@ dependencies {
     compile 'org.slf4j:jcl-over-slf4j:1.7.7'
     compile 'junit:junit:4.12'
     compile 'com.google.guava:guava:18.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 
 repositories {
